--- a/UI/style.css
+++ b/UI/style.css
@@ -1,31 +1,33 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-    color: #444444;
-    -webkit-font-smoothing: antialiased;
-    background: #f0f0f0;
+.imgcontainer {
+    text-align: left;
+    margin: 24px 0 12px 20px;
 }
-#container {
-    position: relative;
-    width: 340px;
-    height: 280px;
-    top: 25%;
-    left: 50%;
-    margin-top: -140px;
-    margin-left: -170px;
-    background: #fff;
-    border-radius: 3px;
+img.avatar {
+    width: 13%;
+    border-radius: 50%;
+    background: #f0f0f0;
     border: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
 }
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
+html, body {   
+    width: 100%;   
+   height: 100%;   
+   font-family: "Helvetica Neue", Helvetica, sans-serif;   
+   color: #444;   
+   -webkit-font-smoothing: antialiased;    background: #f0f0f0;
 }
-img.avatar {
-    width: 15%;
-    border-radius: 50%;
+#container {
+position: fixed;
+width: 340px;
+height: 280px;
+top: 50%;
+left: 50%;
+margin-top: -140px;
+margin-left: -170px;
+background: #fff;
+border-radius: 3px;
+border: 1px solid #ccc;
+box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
 }
 form {
     margin: 0 auto;
@@ -56,7 +58,8 @@ input {
     font-size: 12px;
     outline: none;
 }
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
     color: #777;
     padding-left: 10px;
     margin: 10px;
@@ -66,18 +69,20 @@ input[type=text], input[type=password] {
     height: 35px;
     border: 1px solid #c7d0d2;
     border-radius: 2px;
-    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4) 0 0 0 5px #f5f7f8;
+    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4), 0 0 0 5px #f5f7f8;
     -webkit-transition: all .4s ease;
     -moz-transition: all .4s ease;
     transition: all .4s ease;
 }
-input[type="text"]:hover, input[type="password"]:hover {
+input[type=text]:hover,
+input[type=password]:hover {
     border: 1px solid #b6bfc0;
-    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .7) 0 0 0 5px #f5f7f8;
+    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .7), 0 0 0 5px #f5f7f8;
 }
-input[type="text"]:focus, input[type="password"]:focus {
+input[type=text]:focus,
+input[type=password]:focus {
     border: 1px solid #a8c9e4;
-    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4) 0 0 0 5px #e6f2f9;
+    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4), 0 0 0 5px #e6f2f9;
 }
 #lower {
     background: #ecf2f5;
@@ -101,7 +106,7 @@ input[type=submit] {
     font-size: 14px;
     font-weight: bold;
     color: #fff;
-    background-color: #acd6ef;
+    background-color: #acd6ef; /*IE fallback*/
     background-image: -webkit-gradient(linear, left top, left bottom, from(#acd6ef), to(#6ec2e8));
     background-image: -moz-linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
     background-image: linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
